syntax = "proto3";

package spine.test.delivery;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.delivery";
option java_outer_classname = "SystemEventWatcherTestEventsProto";
option java_multiple_files = true;

message SewProjectCreated {

    string id = 1;
}
